--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                     </div>
                     <div class="project-content project">
                         <img src="project_2.png">
-                        <h3>Calculator</h3>
+                        <h3>Memory Game</h3>
                         <div class="project-action">
-                            <a href="https://github.com/Kapadia-Om-Daxesh/Calculator" class="btn" target="_blank"> Github</a>
-                            <a href="https://kapadia-om-daxesh.github.io/Calculator/" class="btn" target="_blank"> Live Demo</a>
+                            <a href="https://github.com/Kapadia-Om-Daxesh/Memory-Game" class="btn" target="_blank"> Github</a>
+                            <a href="https://kapadia-om-daxesh.github.io/Memory-Game/" class="btn" target="_blank"> Live Demo</a>
                         </div>
                     </div>
                     <div class="project-content project right">
