--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                         <img src="project_1.png">
                         <h3>Group Project</h3>
                         <div class="project-action">
-                            <a href="https://github.com/Kapadia-Om-Daxesh/Kapadia-Om-Daxesh-22BCE2051" class="btn" target="_blank"> Github</a>
-                            <a href="https://kapadia-om-daxesh.github.io/Kapadia-Om-Daxesh-22BCE2051/project_updated/Index.html" class="btn" target="_blank"> Live Demo</a>
+                            <a href="https://github.com/Kapadia-Om-Daxesh/Fluffy-Friends" class="btn" target="_blank"> Github</a>
+                            <a href="https://kapadia-om-daxesh.github.io/Fluffy-Friends/" class="btn" target="_blank"> Live Demo</a>
                         </div>
                     </div>
                     <div class="project-content project">
